Add dashboard experiment

--- a/public/experiments/dashboard/dashboard.html
+++ b/public/experiments/dashboard/dashboard.html
@@ -16,7 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
+    <link href="css/dashboard.css" rel="stylesheet">
 
 </head>
 
@@ -58,7 +58,100 @@
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
             <h1>Welcome</h1>
+
+            <p>
+                Praesent sollicitudin laoreet nibh, in finibus orci pretium at. Duis tincidunt blandit fermentum. Donec vehicula elit at dolor mollis, nec semper lacus molestie. Sed pellentesque ornare ligula sit amet pretium. Ut lacinia malesuada lorem congue accumsan. Nulla semper diam orci, at malesuada massa malesuada vitae. Quisque at mauris felis. Donec imperdiet purus id nisl condimentum, eu hendrerit nunc elementum. Nullam placerat id risus vel congue.
+            </p>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Username</th>
+                            <th>Role</th>
+                            <th>Date of Birth</th>
+                            <th>Date of Hire</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                        <tr>
+                            <td>Alice</td>
+                            <td>Wonderland</td>
+                            <td>alice</td>
+                            <td>factulty</td>
+                            <td>1/1/1998</td>
+                            <td>1/1/2011</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
