--- a/public/project/index.html
+++ b/public/project/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OMDB Project</title>
 </head>
 <body>
-    <h1>Project</h1>
 </body>
 </html>
