--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,6 @@
 
 <a href="assignment/index.html">Assignment</a>
 <br/>
-<a href="project/index.html">Project</a>
+<a href="project/omdb/index.html">Project</a>
 <br/>
 <a href="experiments/index.html">Experiments</a>
