--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -11,6 +11,7 @@
         <nav>
             <ul class="nav nav-tabs">
                 <li><a href="#/home">Home</a></li>
+                <li><a href="#/search">Search</a></li>
             </ul>
         </nav>
         <div ng-view></div>
