Add navigation controller

--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -20,5 +20,6 @@
     <script src="../../../js/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="views/header/navigation.controller.js"></script>
 </body>
 </html>
