Add login controller

--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -21,5 +21,6 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="views/header/navigation.controller.js"></script>
+    <script src="views/login/login.controller.js"></script>
 </body>
 </html>
