--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -23,5 +23,6 @@
     <script src="views/header/navigation.controller.js"></script>
     <script src="views/login/login.controller.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="views/profile/profile.controller.js"></script>
 </body>
 </html>
