add register controller

--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -24,5 +24,6 @@
     <script src="views/login/login.controller.js"></script>
     <script src="services/user.service.client.js"></script>
     <script src="views/profile/profile.controller.js"></script>
+    <script src="views/register/register.controller.js"></script>
 </body>
 </html>
