added omdb service

--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -25,5 +25,7 @@
     <script src="services/user.service.client.js"></script>
     <script src="views/profile/profile.controller.js"></script>
     <script src="views/register/register.controller.js"></script>
+    <script src="views/search/search.controller.js"></script>
+    <script src="services/omdb.service.client.js"></script>
 </body>
 </html>
