--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -27,5 +27,6 @@
     <script src="views/register/register.controller.js"></script>
     <script src="views/search/search.controller.js"></script>
     <script src="services/omdb.service.client.js"></script>
+    <script src="views/details/details.controller.js"></script>
 </body>
 </html>
