added jga.css file

--- a/public/project/omdb/client/index.html
+++ b/public/project/omdb/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="OmdbApp">
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../css/jga.css"/>
     <meta charset="UTF-8">
     <title>OMDB Project</title>
 </head>
